--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,7 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 bind-key v split-window -v
-bind-key x split-window -h
+bind-key h split-window -h
 
 # TPM and vim support.
 set -g @plugin 'tmux-plugins/tpm'
