--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,8 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
-bind-key v split-window -v
-bind-key h split-window -h
+bind-key - split-window -v
+bind-key | split-window -h
 
 # TPM and vim support.
 set -g @plugin 'tmux-plugins/tpm'
