--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -g mouse on
 # Change prefix to C-s.
 set -g prefix C-s
 
-# Vim Keybindings.
+# My NeoVim Keybindings.
 setw -g mode-keys vi
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -16,6 +16,10 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 bind-key - split-window -v
 bind-key | split-window -h
+bind-key H resize-pane -L 50
+bind-key J resize-pane -D 50
+bind-key K resize-pane -U 50
+bind-key L resize-pane -R 50
 
 # TPM and vim support.
 set -g @plugin 'tmux-plugins/tpm'
