--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,4 +34,7 @@ set -g @tokyo-night-tmux_zoom_id_style dsquare
 set -g @tokyo-night-tmux_date_format DMY
 set -g @tokyo-night-tmux_time_format 24H
 
+# Interactive session manager
+set -g @plugin 'omerxx/tmux-sessionx'
+
 run '~/.tmux/plugins/tpm/tpm'
