--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,5 +36,6 @@ set -g @tokyo-night-tmux_time_format 24H
 
 # Interactive session manager
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @sessionx-bind 'o'
 
 run '~/.tmux/plugins/tpm/tpm'
